--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "native-base": "2.3.1",
     "react": "16.0.0-alpha.13",
     "react-native": "0.46.4",
+    "react-native-fbsdk": "^0.7.0",
     "react-native-i18n": "^2.0.11",
     "react-native-image-slider": "^1.1.5",
     "react-navigation": "1.0.0-beta.11",
