--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "color": "~1.0.3",
+    "has-symbol-support-x": "^1.4.1",
     "lodash": "^4.13.1",
     "native-base": "2.3.1",
     "react": "16.0.0-alpha.13",
     "react-native": "0.46.4",
+    "react-native-fbsdk": "^0.7.0",
     "react-native-i18n": "^2.0.11",
     "react-native-image-slider": "^1.1.5",
     "react-navigation": "1.0.0-beta.11",
