--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "color": "~1.0.3",
+    "has-symbol-support-x": "^1.4.1",
     "lodash": "^4.13.1",
     "native-base": "2.3.1",
     "react": "16.0.0-alpha.13",
