--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,7 @@ android {
 }
 
 dependencies {
+    //compile project(':react-native-image-crop-picker')
     //compile project(':react-native-fbsdk')
     compile project(':react-native-i18n')
     compile project(':react-native-vector-icons')
