--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-i18n": "^2.0.11",
     "react-native-image-slider": "^1.1.5",
     "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-popover-tooltip": "^1.1.4",
     "react-navigation": "1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
