--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-google-signin')
+    compile project(':react-native-facebook-login')
     //compile project(':react-native-image-crop-picker')
     //compile project(':react-native-fbsdk')
     compile project(':react-native-i18n')
