--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,7 +144,14 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-google-signin')
+    compile project(':react-native-image-crop-picker')
+    compile project(':react-native-image-picker')
+    //compile project(':react-native-google-signin')
+    compile(project(":react-native-google-signin")){         
+        exclude group: "com.google.android.gms" // very important
+    }
+    compile 'com.google.android.gms:play-services-auth:9.0.0'
+    //compile 'com.google.firebase:firebase-core:11.8.0'
     compile project(':react-native-facebook-login')
     //compile project(':react-native-image-crop-picker')
     //compile project(':react-native-fbsdk')
@@ -154,6 +161,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
+apply plugin: 'com.google.gms.google-services' // <--- this should be the last line
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
