--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "native-base": "2.3.1",
     "react": "16.0.0-alpha.13",
     "react-native": "0.46.4",
+    "react-native-aws3": "0.0.8",
     "react-native-facebook-login": "^1.6.0",
     "react-native-google-signin": "^0.10.0",
     "react-native-i18n": "^2.0.11",
+    "react-native-image-crop-picker": "^0.16.1",
+    "react-native-image-picker": "^0.26.7",
     "react-native-image-slider": "^1.1.5",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-popover-tooltip": "^1.1.4",
