--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "native-base": "2.3.1",
     "react": "16.0.0-alpha.13",
     "react-native": "0.46.4",
+    "react-native-app-intro-v2": "^2.1.2",
     "react-native-aws3": "0.0.8",
     "react-native-facebook-login": "^1.6.0",
     "react-native-google-signin": "^0.10.0",
@@ -36,6 +37,7 @@
     "react-native-modal": "^5.2.0",
     "react-native-popover-tooltip": "^1.1.4",
     "react-native-slider": "^0.11.0",
+    "react-native-swiper": "^1.5.13",
     "react-navigation": "1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
