--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "native-base": "2.3.1",
     "react": "16.0.0-alpha.13",
     "react-native": "0.46.4",
-    "react-native-app-intro-v2": "^2.1.2",
     "react-native-aws3": "0.0.8",
+    "react-native-calendars": "^1.17.3",
     "react-native-facebook-login": "^1.6.0",
     "react-native-google-signin": "^0.10.0",
     "react-native-i18n": "^2.0.11",
