--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "react-native-calendars": "^1.17.3",
     "react-native-facebook-login": "^1.6.0",
     "react-native-google-signin": "^0.10.0",
+    "react-native-htmlview": "^0.12.1",
     "react-native-i18n": "^2.0.11",
     "react-native-image-crop-picker": "^0.16.1",
     "react-native-image-picker": "^0.26.7",
-    "react-native-image-slider": "^1.1.5",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modal": "^5.2.0",
     "react-native-popover-tooltip": "^1.1.4",
