--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.46.4",
     "react-native-app-intro-v2": "^2.1.2",
     "react-native-aws3": "0.0.8",
+    "react-native-calendars": "^1.17.4",
     "react-native-facebook-login": "^1.6.0",
     "react-native-google-signin": "^0.10.0",
     "react-native-htmlview": "^0.12.1",
