--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     ]
   },
   "dependencies": {
+    "class-autobind": "^0.1.4",
     "color": "~1.0.3",
     "has-symbol-support-x": "^1.4.1",
     "lodash": "^4.13.1",
@@ -37,6 +38,7 @@
     "react-native-modal": "^5.2.0",
     "react-native-popover-tooltip": "^1.1.4",
     "react-native-slider": "^0.11.0",
+    "react-native-stars-rating": "^0.1.7",
     "react-native-swiper": "^1.5.13",
     "react-navigation": "1.0.0-beta.11",
     "react-redux": "^5.0.6",
