--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,18 +90,19 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "com.KrewUserApp"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         release {
@@ -147,10 +148,14 @@ dependencies {
     compile project(':react-native-image-crop-picker')
     compile project(':react-native-image-picker')
     //compile project(':react-native-google-signin')
-    compile(project(":react-native-google-signin")){         
-        exclude group: "com.google.android.gms" // very important
-    }
-    compile 'com.google.android.gms:play-services-auth:9.0.0'
+    //compile(project(":react-native-google-signin")){
+    //    exclude group: "com.google.android.gms" // very important
+    //}
+    compile(project(':react-native-maps')){
+     exclude group: 'com.google.android.gms', module: 'play-services-base'
+     exclude group: 'com.google.android.gms', module: 'play-services-maps'
+     }
+    //compile 'com.google.android.gms:play-services-auth:9.0.0'
     //compile 'com.google.firebase:firebase-core:11.8.0'
     compile project(':react-native-facebook-login')
     //compile project(':react-native-image-crop-picker')
@@ -160,6 +165,12 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile ("com.google.android.gms:play-services-base:10.0.1") {
+      force = true;
+   }
+   compile ("com.google.android.gms:play-services-maps:10.0.1") {
+      force = true;
+   }
 }
 apply plugin: 'com.google.gms.google-services' // <--- this should be the last line
 
