--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,10 +148,18 @@ android {
 }
 
 dependencies {
+    //compile project(':react-native-fcm')
+    //compile 'com.google.firebase:firebase-core:10.0.1'
+    //compile(project(':react-native-maps')){
+    // exclude group: 'com.google.android.gms', module: 'play-services-base'
+    // exclude group: 'com.google.android.gms', module: 'play-services-maps'
+    //}
      compile(project(':react-native-maps')){
-     exclude group: 'com.google.android.gms', module: 'play-services-base'
-     exclude group: 'com.google.android.gms', module: 'play-services-maps'
-     }
+        exclude group: 'com.google.android.gms'
+    }
+    compile (project(':react-native-fcm')){
+        exclude group: "com.google.firebase" 
+    }
     compile project(':react-native-vector-icons')
     compile project(':react-native-image-crop-picker')
     compile project(':react-native-image-picker')
@@ -162,7 +170,6 @@ dependencies {
     //compile 'com.google.android.gms:play-services-auth:9.0.0'
     //compile 'com.google.firebase:firebase-core:11.8.0'
     compile project(':react-native-facebook-login')
-    //compile project(':react-native-image-crop-picker')
     //compile project(':react-native-fbsdk')
     compile project(':react-native-i18n')
     compile fileTree(dir: "libs", include: ["*.jar"])
@@ -174,7 +181,12 @@ dependencies {
     compile ("com.google.android.gms:play-services-maps:10.0.1") {
         force = true;
     }
-
+    compile ('com.google.firebase:firebase-core:10.0.1') {
+        force = true;
+    }
+    compile ('com.google.firebase:firebase-messaging:10.0.1') {
+        force = true;
+    }
 }
 apply plugin: 'com.google.gms.google-services' // <--- this should be the last line
 
@@ -184,3 +196,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
