--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -19,4 +19,7 @@ project(':react-native-vector-icons').projectDir = new File(rootProject.projectD
 include ':react-native-maps'
 project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/lib/android')
 
+include ':react-native-fcm'
+project(':react-native-fcm').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fcm/android')
+
 include ':app'
