--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-aws3": "0.0.8",
     "react-native-calendars": "^1.17.4",
     "react-native-facebook-login": "^1.6.1",
+    "react-native-fcm": "^14.1.2",
     "react-native-google-places": "^2.4.2",
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-google-signin": "^0.10.0",
