commit for google plus

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,3 +23,9 @@ MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
 MYAPP_RELEASE_KEY_ALIAS=my-key-alias
 MYAPP_RELEASE_STORE_PASSWORD=goldtree9
 MYAPP_RELEASE_KEY_PASSWORD=goldtree9
+
+MYAPP_DEBUG_STORE_FILE=my-home-debug-key.keystore
+MYAPP_DEBUG_KEY_ALIAS=homekrew
+MYAPP_DEBUG_STORE_PASSWORD=khalid
+MYAPP_DEBUG_KEY_PASSWORD=khalid
+
