--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,13 +108,21 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
-        release {
-            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
-                storeFile file(MYAPP_RELEASE_STORE_FILE)
-                storePassword MYAPP_RELEASE_STORE_PASSWORD
-                keyAlias MYAPP_RELEASE_KEY_ALIAS
-                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+        debug {
+            if (project.hasProperty('MYAPP_DEBUG_STORE_FILE')) {
+                storeFile file(MYAPP_DEBUG_STORE_FILE)
+                storePassword MYAPP_DEBUG_STORE_PASSWORD
+                keyAlias MYAPP_DEBUG_KEY_ALIAS
+                keyPassword MYAPP_DEBUG_KEY_PASSWORD
             }
+        }
+        release {
+            // if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+            //     storeFile file(MYAPP_RELEASE_STORE_FILE)
+            //     storePassword MYAPP_RELEASE_STORE_PASSWORD
+            //     keyAlias MYAPP_RELEASE_KEY_ALIAS
+            //     keyPassword MYAPP_RELEASE_KEY_PASSWORD
+            // }
         }
     }
     splits {
@@ -148,6 +156,7 @@ android {
 }
 
 dependencies {
+    //compile project(':react-native-google-signin')
     //compile project(':react-native-fcm')
     //compile 'com.google.firebase:firebase-core:10.0.1'
     //compile(project(':react-native-maps')){
@@ -164,10 +173,10 @@ dependencies {
     compile project(':react-native-image-crop-picker')
     compile project(':react-native-image-picker')
     //compile project(':react-native-google-signin')
-    //compile(project(":react-native-google-signin")){
-    //    exclude group: "com.google.android.gms" // very important
-    //}
-    //compile 'com.google.android.gms:play-services-auth:9.0.0'
+    compile(project(":react-native-google-signin")){
+       exclude group: "com.google.android.gms" // very important
+    }
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
     //compile 'com.google.firebase:firebase-core:11.8.0'
     compile project(':react-native-facebook-login')
     //compile project(':react-native-fbsdk')
@@ -188,7 +197,7 @@ dependencies {
         force = true;
     }
 }
-apply plugin: 'com.google.gms.google-services' // <--- this should be the last line
+//apply plugin: 'com.google.gms.google-services' // <--- this should be the last line
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
