--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "has-symbol-support-x": "^1.4.2",
     "lodash": "^4.13.1",
     "native-base": "2.3.1",
+    "prop-types": "^15.6.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-aws3": "0.0.8",
