--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "color": "~1.0.3",
     "has-symbol-support-x": "^1.4.2",
     "lodash": "^4.13.1",
+    "moment": "^2.21.0",
     "native-base": "2.3.1",
     "prop-types": "^15.6.1",
     "react": "16.0.0",
