--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.51.0",
     "react-native-aws3": "0.0.8",
     "react-native-calendars": "^1.17.4",
+    "react-native-circular-progress": "^0.2.0",
     "react-native-communications": "^2.2.1",
     "react-native-facebook-login": "^1.6.1",
     "react-native-fcm": "^14.1.2",
@@ -43,6 +44,7 @@
     "react-native-image-picker": "^0.26.7",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-maps": "^0.20.1",
+    "react-native-maps-directions": "^1.6.0",
     "react-native-modal": "^5.3.0",
     "react-native-popover-tooltip": "^1.1.4",
     "react-native-slider": "^0.11.0",
