--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "class-autobind": "^0.1.4",
     "color": "~1.0.3",
+    "firebase": "^4.12.1",
     "has-symbol-support-x": "^1.4.2",
     "lodash": "^4.13.1",
     "moment": "^2.21.0",
