--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-communications": "^2.2.1",
     "react-native-facebook-login": "^1.6.1",
     "react-native-fcm": "^14.1.2",
+    "react-native-firebase": "^4.0.0",
     "react-native-google-places": "^2.4.2",
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-google-signin": "^0.10.0",
