--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
             "node_modules/(?!react-native|native-base-shoutem-theme)"
         ]
     },
-
     "dependencies": {
         "class-autobind": "^0.1.4",
         "color": "~1.0.3",
@@ -56,6 +55,7 @@
         "react-native-stars-rating": "^0.1.7",
         "react-native-swiper": "^1.5.13",
         "react-native-vector-icons": "^4.5.0",
+        "react-native-xml2js": "^1.0.3",
         "react-navigation": "1.0.0-beta.11",
         "react-redux": "^5.0.7",
         "redux": "^3.7.2",
