--- a/ios/NativebaseKitchenSink/Info.plist
+++ b/ios/NativebaseKitchenSink/Info.plist
@@ -53,6 +53,10 @@
 		<string>Zocial.ttf</string>
 		<string>MaterialCommunityIcons.ttf</string>
 		<string>Feather.ttf</string>
+		<string>Lato-Regular.ttf</string>
+		<string>Pangolin-Regular.ttf</string>
+		<string>PangolinRegular.ttf</string>
+		<string>Poppins-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
