--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
             "node_modules/(?!react-native|native-base-shoutem-theme)"
         ]
     },
+    "rnpm": {
+        "assets": [
+            "./assets/fonts/"
+        ]
+    },
     "dependencies": {
         "class-autobind": "^0.1.4",
         "color": "~1.0.3",
@@ -38,6 +43,7 @@
         "react-native-fcm": "^14.1.2",
         "react-native-firebase": "^4.0.0",
         "react-native-global-font": "^1.0.1",
+        "react-native-global-props": "^1.1.3",
         "react-native-google-places": "^2.4.2",
         "react-native-google-places-autocomplete": "^1.3.6",
         "react-native-google-signin": "^0.10.0",
