--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "devDependencies": {
         "babel-preset-react-native": "^4.0.0",
+        "eslint-config-rallycoding": "^3.2.0",
         "jest": "20.0.4",
         "react-test-renderer": "16.0.0-alpha.13"
     },
