--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -97,7 +97,7 @@ android {
    cruncherEnabled = false
    } 
     defaultConfig {
-        applicationId "com.KrewUserApp"
+        applicationId "com.HomeKrew.User"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
