--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,10 +19,10 @@
 
 android.useDeprecatedNdk=true
 
-MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
-MYAPP_RELEASE_KEY_ALIAS=my-key-alias
-MYAPP_RELEASE_STORE_PASSWORD=goldtree9
-MYAPP_RELEASE_KEY_PASSWORD=goldtree9
+MYAPP_RELEASE_STORE_FILE=my-home-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=homekrew
+MYAPP_RELEASE_STORE_PASSWORD=Host@123456
+MYAPP_RELEASE_KEY_PASSWORD=Host@123456
 
 MYAPP_DEBUG_STORE_FILE=my-home-debug-key.keystore
 MYAPP_DEBUG_KEY_ALIAS=homekrew
