beta issue testing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -183,7 +183,9 @@ dependencies {
     compile project(':react-native-i18n')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    //compile "com.facebook.react:react-native:+"  // From node_modules
+    compile("com.facebook.react:react-native:0.51.0") { force = true }
+
     compile ("com.google.android.gms:play-services-base:10.0.1") {
         force = true;
     }
