--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -185,7 +185,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     //compile "com.facebook.react:react-native:+"  // From node_modules
     compile("com.facebook.react:react-native:0.51.0") { force = true }
-
+    compile project(':react-native-geo-fencing')
     compile ("com.google.android.gms:play-services-base:10.0.1") {
         force = true;
     }
