--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -24,4 +24,6 @@ project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../
 include ':react-native-fcm'
 project(':react-native-fcm').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fcm/android')
 
+include ':react-native-geo-fencing'
+project(':react-native-geo-fencing').projectDir = new File(settingsDir, '../node_modules/react-native-geo-fencing/android')
 include ':app'
