--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react-native-facebook-login": "^1.6.1",
         "react-native-fcm": "^14.1.2",
         "react-native-firebase": "^4.0.0",
+        "react-native-geo-fencing": "^0.1.0",
         "react-native-global-font": "^1.0.1",
         "react-native-global-props": "^1.1.3",
         "react-native-google-places": "^2.4.2",
