--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,14 +13,31 @@ buildscript {
     }
 }
 
+// allprojects {
+//     repositories {
+//         mavenLocal()
+//         jcenter()
+//         maven { url 'https://jitpack.io' }
+//         maven {
+//             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+//             url "$rootDir/../node_modules/react-native/android"
+//         }
+//     }
+// }
 allprojects {
     repositories {
+        // this is for native modules I'm developing
         mavenLocal()
-        jcenter()
-        maven { url 'https://jitpack.io' }
+        // for modules depending on jitpack.io
+        maven { url "https://jitpack.io" }
+        // add this one
         maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url "https://maven.google.com"
+        }
+        maven {
             url "$rootDir/../node_modules/react-native/android"
         }
+        // keep this at the end
+        jcenter()
     }
 }
