--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-native-render-html": "^3.9.3",
         "react-native-slider": "^0.11.0",
         "react-native-stars-rating": "^0.1.7",
+        "react-native-stopwatch-timer": "0.0.20",
         "react-native-swiper": "^1.5.13",
         "react-native-vector-icons": "^4.5.0",
         "react-native-xml2js": "^1.0.3",
